--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	padding: 0;
 	background-color: gray;
 }
 h1 {
@@ -13,5 +14,5 @@ h1 {
 	background-color: orange;
 	margin: 1em;
 	padding: 1em;
-	text-decoration: none;
+	list-style-type: none;
 }
