--- a/style.css
+++ b/style.css
@@ -1,18 +1,37 @@
 body {
-	margin: 0;
-	padding: 0;
 	background-color: gray;
 }
+
 h1 {
+	font-size: 5em;
 	text-align: center;
 	color: white;
+	margin: 0.1em 0;
 }
+
 .icon {
 	width: 8em;
 }
-#pdf > li {
-	background-color: orange;
-	margin: 1em;
-	padding: 1em;
+
+#pdf {
+	padding: 0;
+}
+
+#pdf > li{
 	list-style-type: none;
+	width: 8em;
+}
+
+#pdf > li > a {
+	display: block;
+	background-color: orange;
+	width: 8em;
+	text-decoration: none;
+	text-align: center;
+	margin: 1em;
+	padding: 0.5em;
+}
+
+#pdf > li > a > p {
+	margin: 0;
 }
