--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 body {
-	font-family: Monospace;
+	font-family: Inconsolata;;
 	background-color: black;
 	color: white;
+	margin: 0 auto;
+	padding: 0 1.5em;
+	font-size: 1.5em;
+	max-width: 50em;
+}
+
+h1 {
+	text-align: center;
 }
