--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
-	font-family: Inconsolata;;
+	font-family: Inconsolata,
+				 Monospace;
 	background-color: black;
 	color: white;
 	margin: 0 auto;
-	padding: 0 1.5em;
+	padding: 0 2%;
 	max-width: 50em;
+	font-size: 100%;
 }
 
 h1 {
