--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-	font-family: Inconsolata,
-				 Monospace;
+	font-family: Inconsolata, Monospace;
 	background-color: black;
 	color: white;
 	margin: 0 auto;
@@ -14,5 +13,5 @@ h1 {
 }
 
 p {
-	font-size: 1em;
+	font-size: 2em;
 }
