--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@ body {
 	background-color: black;
 	color: white;
 	margin: 0 auto;
-	padding: 0 2%;
-	max-width: 50em;
-	font-size: 100%;
+	padding: 0 2% 10em;
+	max-width: 60em;
+	font-size: 16px;
+}
+
+@media (max-width: 500px) {
+	body {
+		font-size: 12px;
+	}
 }
 
 h1 {
