--- a/style.css
+++ b/style.css
@@ -3,22 +3,23 @@ body {
 	background-color: black;
 	color: white;
 	margin: 0 auto;
-	padding: 0 2% 10em;
-	max-width: 60em;
-	font-size: 16px;
+	padding: 0 3% 10em;
+	max-width: 40em;
+	font-size: 24px;
+	line-height: 1.1em;
 }
 
 @media (max-width: 500px) {
 	body {
-		font-size: 12px;
+		font-size: 10px;
 	}
 }
 
 h1 {
 	text-align: center;
-	font-size: 3em;
+	font-size: 2em;
 }
 
 p {
-	font-size: 1.5em;
+	font-size: 1em;
 }
