--- a/style.css
+++ b/style.css
@@ -11,15 +11,21 @@ body {
 
 @media (max-width: 500px) {
 	body {
-		font-size: 12px;
+		font-size: 14px;
 	}
 }
 
 h1 {
 	text-align: center;
 	font-size: 2em;
+	font-weight: normal;
 }
 
 p {
 	font-size: 1em;
+}
+
+@font-face {
+	font-family: Inconsolata;
+	src: url(fonts/Inconsolata-Regular.ttf);
 }
