--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ header {
 	display: inline-block;
 }
 
+aside {
+	float: right;
+	border: 1px;
+	border-color: white;
+}
+
 hr {
 	color: #0F0;
 }
@@ -38,4 +44,8 @@ h1 {
 	text-align: center;
 	font-weight: normal;
 	margin: 0.5em;
+}
+
+img {
+	float: center;
 }
