--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ header {
 }
 
 aside {
-	float: right;
-	border: 1px;
+	border-style: solid;
+	border-size: 1px;
 	border-color: white;
+	text-align: right;
 }
 
 hr {
@@ -44,8 +45,4 @@ h1 {
 	text-align: center;
 	font-weight: normal;
 	margin: 0.5em;
-}
-
-img {
-	float: center;
 }
