--- a/style.css
+++ b/style.css
@@ -25,10 +25,9 @@ header {
 }
 
 aside {
-	border-style: solid;
-	border-size: 1px;
-	border-color: white;
+	border: 1px solid white;
 	text-align: right;
+	margin: 0.5em;
 }
 
 hr {
