--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
 }
 
 aside {
+	display: inline-block;
 	border: 1px solid white;
 	text-align: right;
 	margin: 0.5em;
@@ -44,4 +45,8 @@ h1 {
 	text-align: center;
 	font-weight: normal;
 	margin: 0.5em;
+}
+
+.alignright {
+	text-align: right;
 }
