--- a/home.css
+++ b/home.css
@@ -24,14 +24,6 @@ header {
 	display: inline-block;
 }
 
-aside {
-	display: inline-block;
-	border: 1px solid white;
-	text-align: right;
-	margin: 0.5em;
-	padding: 0.5em;
-}
-
 hr {
 	color: #0F0;
 }
@@ -48,6 +40,28 @@ h1 {
 	margin: 0.5em;
 }
 
-.alignright {
-	text-align: right;
+h2 {
+	font-weight: normal;
+}
+
+ul {
+	list-style-type: none;
+}
+
+ul li::before {
+	content: "+";
+	color: #0F0;
+	font-weight: bold;
+	display: inline-block;
+	width: 1em;
+	margin-left: -1em;
+}
+
+.thumb { 
+	width: 25%;
+	display: none;
+}
+
+.thumb:hover {
+	opacity: 0.8;
 }
