--- a/style.css
+++ b/style.css
@@ -1,21 +1,16 @@
 body {
-	font-family: Inconsolata, Monospace;
+	font-family: "Latin Modern", "Times New Roman", serif;
 	background-color: black;
 	color: white;
 	margin: 0 auto;
-	padding: 0 3% 8em;
+	padding: 0 3% 5em;
 	max-width: 40em;
-	font-size: 24px;
+	font-size: 16px;
 	line-height: 1.1em;
 }
 
 header {
-	margin: 1em auto;
 	text-align: center;
-}
-
-.header {
-	display: inline-block;
 }
 
 hr {
@@ -24,25 +19,14 @@ hr {
 
 a {
 	text-decoration: underline;
-	color: white;
+	color: green;
 }
-a:hover { color: #0F0; }
 
 header a {
 	text-decoration: none;
 	color: white;
 }
 header a:hover { color: #0F0; }
-
-h1 {
-	text-align: center;
-	font-weight: normal;
-	margin: 0.5em;
-}
-
-h2 {
-	font-weight: normal;
-}
 
 ul {
 	list-style-type: none;
@@ -61,21 +45,15 @@ ul li::before {
 	width: 25%;
 	margin: 0;
 }
-
 .thumb:hover {
 	opacity: 0.8;
 }
-
 .thumblink {
 	margin: 0;
 	width: 25%;
 }
 #gal {
 	font-size: 0;
-}
-
-span {
-	color: #0F0;
 }
 
 @media (max-width: 500px) {
@@ -86,4 +64,3 @@ span {
 		width: 50%;
 	}
 }
-
