Fix dynamic thumbnails

--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@ body {
 	margin: 0 auto;
 	padding: 0 3% 5em;
 	max-width: 40em;
-	font-size: 24px;
+	font-size: 2em;
 	line-height: 1.1em;
 }
 
-/* horizontal rule is grey by default */
+/* horizontal rule to be white, because it's grey by default */
 hr { color: white; }
 
 /* bright green hyperlinks */
 a { color: #55ff55; }
 
-/* white title */
+/* title */
 header a {
 	text-align: center;
-	color: white;
-	text-decoration: none;
+	color: white; 
+	text-decoration: none; /* remove hyperlink underscore */
 }
 
 /* gallery */
@@ -28,14 +28,14 @@ header a {
 	margin: 0;
 }
 #imageGrid a img:hover { opacity: 0.8; }
-#imageGrid { font-size: 0 }
+#imageGrid { font-size: 0; }
 
 /* mobile display */
 @media (max-width: 600px) {
 	body {
-		font-size: 14px;
+		font-size: 0.8em;
 	}
 	.thumb {
-		width: 50%;
+		width: 50%; /* make images take half instead of quarter of the body on mobile devices */
 	}
 }
