Serif to sans-serif

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Latin Modern Roman", "Times New Roman", serif;
+	font-family: sans-serif;
 	background-color: black;
 	color: white;
 	margin: 0 auto;
