--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header a {
 	body {
 		font-size: 0.8em;
 	}
-	.thumb {
-		width: 50%; /* make images take half instead of quarter of the body on mobile devices */
+	#imageGrid a img {
+    width: calc(100% / 3); /* images 1/3 instead of 1/4 of the body on mobile */
 	}
 }
